cmake_minimum_required (VERSION 2.8)
project (home_works)
add_executable(library_test test.cc)
set_property(TARGET library_test PROPERTY CXX_STANDARD 14)
set(CMAKE_EXE_LINKER_FLAGS "-pthread")
add_subdirectory(thread_pool) 
add_subdirectory(barrier)
include (CTest)
add_test(library_test library_test)
